# ecs_sdl_example

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  readme.md
includes/: vector_2.h
src/: main.c
src/core/: camera.c  camera.h  game.c  game.h  tilemap.c  tilemap.h  world.c  world.h
src/ecs/components/: collision.c  collision.h  gui.c  gui.h  input.c  input.h  position.c  position.h  sprite.c  sprite.h  velocity.c  velocity.h
src/ecs/entities/: player.c  player.h
src/ecs/entities/gui/: mouse.c  mouse.h
src/ecs/systems/: collision.c  collision.h  draw_sprite.c  draw_sprite.h  draw_ui_sprite.c  draw_ui_sprite.h  input.c  input.h  move.c  move.h
